Pdf styles overlapp fixed

--- a/themes/hzd/css/style.css
+++ b/themes/hzd/css/style.css
@@ -2607,7 +2607,7 @@ article.quickinfo .field .field__items {
 article.quickinfo .field .field--item,
 article.quickinfo .field .field--items {
     width: 100%;
-    float: left;
+/*    float: left; */
     margin: 0 0 3px 0%;
    padding:0;
 }
